--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "axios": "^1.1.2",
+    "mobx": "^6.6.2",
+    "mobx-react": "^7.5.3",
+    "mobx-utils": "^6.0.5",
     "react": "18.1.0",
     "react-native": "0.70.2"
   },
