--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/native": "^6.0.13",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.0",
     "axios": "^1.1.2",
     "mobx": "^6.6.2",
     "mobx-react": "^7.5.3",
     "mobx-utils": "^6.0.5",
     "react": "18.1.0",
-    "react-native": "0.70.2"
+    "react-native": "0.70.2",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
